<resources>
    <string name="app_name">SplitTab</string>
    <string name="tab_text_1">Add Payment</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">Overview</string>
    <string name="tab_text_4">Receipts</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="add_payment">Add Payment</string>


    <string name="dollar">USD</string>
    <string name="swedish_krona">SEK</string>


    <string name="january">January</string>
    <string name="february">February</string>
    <string name="mars">Mars</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="channel">Channel:</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign out</string>
    <string name="app_title">SplitTab</string>
    <string name="cancel">Cancel</string>
    <string name="add_group">Add group</string>
    <string name="join_group">Join group</string>
    <string name="new_group">New Group</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_semi_colon">Group:</string>
    <string name="group_id">Group ID</string>
    <string name="enter_5_char">Enter a 5 character code</string>
    <string name="that_ID_doesnt_exist">That ID doesn\'t exist</string>
    <string name="already_in_group">You are already in that group</string>
    <string name="enter_name_to_create_group">Enter a name to create a group</string>
    <string name="settings">Settings</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="thank_you_feedback">Thank you for your feedback!</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="enter_amount_to_add_payment">Enter an amount to add payment</string>
    <string name="enter_description_to_add_payment">Enter a description to add payment</string>
    <string name="saved_payment">Saved payment</string>
    <string name="no_group_selected">No group selected</string>
    <string name="feedback">Feedback</string>
    <string name="select_participants">Select Participants</string>
    <string name="ok">Ok</string>
    <string name="leave_group">Leave group</string>
    <string name="enter_participants">Enter participants to add payment</string>
    <string name="enter_someone_else">Enter someone else to share the payment with</string>
    <string name="no_selcted_group">No selected group</string>
    <string name="credit_not_zero">Credit has to be 0 to leave group</string>
    <string name="no_group">No Group</string>
</resources>