<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionbarGroup"
        android:title="@string/no_group"
        app:showAsAction="always|withText" />

<!--    <item-->
<!--        android:id="@+id/actionbarChat"-->
<!--        android:icon="@drawable/chat_icon"-->
<!--        android:title="Chat"-->
<!--        app:showAsAction="always" />-->

    <item
        android:id="@+id/actionbarSettings"
        android:icon="@drawable/settings_icon"
        android:title="Settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionbarLeaveGroup"
        android:title="@string/leave_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbarSignOut"
        android:title="@string/sign_out"
        app:showAsAction="never" />

</menu>